--- a/src/index2.css
+++ b/src/index2.css
@@ -1,142 +1,170 @@
 :root {
-	--border-size: 2px;
-	--main-dark-color: #f4b8aa;
-	--main-light-color: #fdedd3;
+  --border-size: 2px;
+  --main-dark-color: #f4b8aa;
+  --main-light-color: #fdedd3;
 }
 
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	/* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-	font-family: 'Times New Roman', Times, serif;
-	letter-spacing: 1px;
-	font-size: 16px;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+  font-family: "Times New Roman", Times, serif;
+  letter-spacing: 1px;
+  font-size: 16px;
 }
 
 body {
-	height: fit-content;
-  background-image: linear-gradient(180deg, var(--main-dark-color) 0%, var(--main-light-color) 85%);
+  height: fit-content;
+  background-image: linear-gradient(
+    180deg,
+    var(--main-dark-color) 0%,
+    var(--main-light-color) 85%
+  );
 }
 
 button {
-	-webkit-text-fill-color: black;
+  -webkit-text-fill-color: black;
 }
 
 input[type="checkbox"] {
-	border: 1px solid var(--main-dark-color);
+  border: 1px solid var(--main-dark-color);
 }
 
-input[type="text"], select, textarea {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
+input[type="text"],
+select,
+textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
-input[type="text"], input[type="number"], select, textarea{
-	padding: 5px;
-	color: black;
-	background-color: white;
-	border: none;
-	border-bottom: 1px solid var(--main-dark-color);	
-	transition: border 0.1s linear;
+input[type="text"],
+input[type="number"],
+select,
+textarea {
+  padding: 5px;
+  color: black;
+  background-color: white;
+  border: none;
+  border-bottom: 1px solid var(--main-dark-color);
+  transition: border 0.1s linear;
 }
 
-input:active, select:active, textarea:active,
-input:focus, select:focus, textarea:focus {
-	outline: none;
-	border-bottom: 3px solid var(--main-dark-color);
+input:active,
+select:active,
+textarea:active,
+input:focus,
+select:focus,
+textarea:focus {
+  outline: none;
+  border-bottom: 3px solid var(--main-dark-color);
 }
 
 label {
-	font-weight: 600;
+  font-weight: 600;
 }
 
 .input-container {
-	display: flex;
-	flex-direction: column;
-	gap: 5px;
-	margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-bottom: 10px;
 }
 
 .input-container > input,
 .input-container > select {
-	width: 100%;
+  width: 100%;
 }
 
-::placeholder, option.placeholder {
-	color: lightgray;
+::placeholder,
+option.placeholder {
+  color: lightgray;
 }
 
 .button-container {
-	display: flex;
-	justify-content: center;
-	margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
 }
 
 .form-btn {
-	width: 12vw;
-	height: 4vw;
-	background-color: #fff;
-	position: relative;
-	border: none;
-	border-radius: 10px;
-	max-width: 125px;
-	max-height: 40px;
+  width: 12vw;
+  height: 4vw;
+  background-color: #fff;
+  position: relative;
+  border: none;
+  border-radius: 10px;
+  max-width: 125px;
+  max-height: 40px;
 }
 
 .form-btn::before {
-	content: '';
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	z-index: 1;
-	border-radius: 10px;
-	border: 1px solid var(--main-dark-color);
-	transition: top, left, right, bottom, 100ms ease-in-out;
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  border-radius: 10px;
+  border: 1px solid var(--main-dark-color);
+  transition: top, left, right, bottom, 100ms ease-in-out;
 }
 
 .form-btn:hover {
-	border: 1px solid var(--main-dark-color);
+  border: 1px solid var(--main-dark-color);
 }
 
 .form-btn:hover::before,
 .form-btn:focus::before {
-	border: 2px solid var(--main-dark-color);
-	border-radius: 16px;	
-	top: calc(var(--border-size) * -3);
-	left: calc(var(--border-size) * -3);
-	right: calc(var(--border-size) * -3);
-	bottom: calc(var(--border-size) * -3);
+  border: 2px solid var(--main-dark-color);
+  border-radius: 16px;
+  top: calc(var(--border-size) * -3);
+  left: calc(var(--border-size) * -3);
+  right: calc(var(--border-size) * -3);
+  bottom: calc(var(--border-size) * -3);
 }
 
 .container {
-	background-color: #fff;
-	width: 50vw;
-	margin: 0 auto;
-	padding: 40px;
-	display: flex;
-	flex-direction: column;
-	gap: 15px;
-	max-width: 450px;
-	transition: all, 100ms ease-in-out;
-	box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
-	border-radius: 10px;
-	margin-bottom: 10vh;
-	/* position: relative; */
+  background-color: #fff;
+  width: 50vw;
+  margin: 0 auto;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  max-width: 450px;
+  transition: all, 100ms ease-in-out;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin-bottom: 10vh;
+  /* position: relative; */
 }
 
 /* Button bounce animation */
 @keyframes bounce {
-  0%   { transform: scale(1,1)      translateY(0); }
-  10%  { transform: scale(1.1,.9)   translateY(0); }
-  30%  { transform: scale(.9,1.1)   translateY(-20px); }
-  50%  { transform: scale(1.05,.95) translateY(0); }
-  57%  { transform: scale(1,1)      translateY(-7px); }
-  64%  { transform: scale(1,1)      translateY(0); }
-  100% { transform: scale(1,1)      translateY(0); }
+  0% {
+    transform: scale(1, 1) translateY(0);
+  }
+  10% {
+    transform: scale(1.1, 0.9) translateY(0);
+  }
+  30% {
+    transform: scale(0.9, 1.1) translateY(-20px);
+  }
+  50% {
+    transform: scale(1.05, 0.95) translateY(0);
+  }
+  57% {
+    transform: scale(1, 1) translateY(-7px);
+  }
+  64% {
+    transform: scale(1, 1) translateY(0);
+  }
+  100% {
+    transform: scale(1, 1) translateY(0);
+  }
 }
 
 .button-bounce {
@@ -145,9 +173,9 @@ label {
 
 /* For tablets */
 @media (max-width: 768px) {
-	* {
-		font-size: 15px;
-	}
+  * {
+    font-size: 15px;
+  }
 
   .container {
     width: 70vw;
@@ -161,9 +189,9 @@ label {
 
 /* For mobile phones */
 @media (max-width: 480px) {
-	* {
-		font-size: 14px;
-	}
+  * {
+    font-size: 14px;
+  }
 
   .container {
     width: 90vw;
@@ -171,57 +199,59 @@ label {
   }
 
   .form-btn {
-		min-width: 30px;
-		min-height: 30px;
+    min-width: 30px;
+    min-height: 30px;
     width: 50vw;
     max-width: 80px;
   }
 }
 
 .card-container {
-	margin: 5vh auto;
-	background-color: white;
-	max-width: 450px; 
-	width: 50vw;
-	height: fit-content;
-	padding: 20px;
-	display: flex;
-	flex-direction: column;
-	border-radius: 10px;
-	justify-content: center;
-	gap:5px;
+  margin: 5vh auto;
+  background-color: white;
+  max-width: 450px;
+  width: 50vw;
+  height: fit-content;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  justify-content: center;
+  gap: 5px;
 }
 
 .logo {
-	width: 25%;
-	margin-bottom: 10px;
+  width: 25%;
+  margin-bottom: 10px;
 }
 
 .logo-container {
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .card-container > p {
-	font-family: 'Times New Roman', Times, serif;
-	text-align: center;
-	letter-spacing: 1px;
+  font-family: "Times New Roman", Times, serif;
+  text-align: center;
+  letter-spacing: 1px;
 }
 
 .card-container > .heading {
-	letter-spacing: 1px;
-	font-size: 23px;
-	text-transform: uppercase;
-	font-weight: 600;
+  letter-spacing: 1px;
+  font-size: 23px;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
 .card-container > .sub-heading {
-	font-size: 20px;
-	text-transform: capitalize;
+  font-size: 18px;
+  text-transform: capitalize;
+  font-weight: 700;
 }
 
 .card-container > .sub-heading-2 {
-	font-size: 16px;
+  font-size: 16px;
+  font-weight: 700;
 }
 
 /* For tablets */
@@ -230,82 +260,120 @@ label {
     width: 70vw;
   }
 
-	.card-container > p {
-		font-family: 'Times New Roman', Times, serif;
-		text-align: center;
-	}
+  .card-container > p {
+    font-family: "Times New Roman", Times, serif;
+    text-align: center;
+  }
 
-	.card-container > .heading {
-		font-size: 20px;
-		text-transform: uppercase;
-	}
+  .card-container > .heading {
+    font-size: 20px;
+    text-transform: uppercase;
+  }
 
-	.card-container > .sub-heading {
-		font-size: 18px;
-		text-transform: capitalize;
-	}
+  .card-container > .sub-heading {
+    font-size: 18px;
+    text-transform: capitalize;
+  }
 
-	.card-container > .sub-heading-2 {
-		font-size: 16px;
-	}
+  .card-container > .sub-heading-2 {
+    font-size: 16px;
+  }
 }
 
 /* For mobile phones */
 @media (max-width: 480px) {
   .card-container {
     width: 90vw;
-		max-width: 400px;
+    max-width: 400px;
   }
 
-	.card-container > p {
-		font-family: 'Times New Roman', Times, serif;
-		text-align: center;
-	}
+  .card-container > p {
+    font-family: "Times New Roman", Times, serif;
+    text-align: center;
+  }
 
-	.card-container > .heading {
-		font-size: 20px;
-		text-transform: uppercase;
-	}
+  .card-container > .heading {
+    font-size: 20px;
+    text-transform: uppercase;
+  }
 
-	.card-container > .sub-heading {
-		font-size: 18px;
-		text-transform: capitalize;
-	}
+  .card-container > .sub-heading {
+    font-size: 18px;
+    text-transform: capitalize;
+  }
 
-	.card-container > .sub-heading-2 {
-		font-size: 16px;
-	}
+  .card-container > .sub-heading-2 {
+    font-size: 16px;
+  }
 }
 
 a.link {
-	text-decoration: underline;
-	transition: color 0.1s ease-in;
+  text-decoration: underline;
+  transition: color 0.1s ease-in;
 }
 
 a.link:hover {
-	color: blue;
+  color: blue;
 }
 
 /* Modal */
 /* The Modal (background) */
 .modal {
   position: fixed;
-  z-index: 1; 
-	top: 0;
+  z-index: 2;
+  top: 0;
   margin: 10 auto;
-  width: 100%; 
-  height: 100%; 
+  width: 100%;
+  height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
 }
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
+  top: 50px;
+  padding: 30px;
   border: 1px solid #888;
-  width: 80%;
+  width: 40vw;
+	height: fit-content;
+  border-radius: 10px;
+  position: relative;
+	min-width: 650px;
+}
+
+/* For tablets */
+@media (max-width: 768px) {
+  .modal-content {
+		background-color: #fefefe;
+		top: 30px;
+		padding: 30px;
+		border: 1px solid #888;
+		width: 40vw;
+		border-radius: 10px;
+		min-width: 500px;
+	}
+}
+
+/* For mobile phones */
+@media (max-width: 480px) {
+  .modal-content {
+		background-color: #fefefe;
+		top: 20px;
+		padding: 25px;
+		border: 1px solid #888;
+		border-radius: 10px;
+		min-width: 350px;
+		margin-bottom: 5vh;
+	}
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .close {
@@ -313,7 +381,7 @@ a.link:hover {
   float: right;
   font-size: 28px;
   font-weight: bold;
-	transition: color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
 }
 
 .close:hover,
@@ -321,4 +389,31 @@ a.link:hover {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+ol {
+  list-style-position: outside;
+  padding-left: 20px;
+}
+
+ol > li {
+	text-align: justify;
+	text-justify: inter-word;
+	padding-bottom: 5px;
+}
+
+.rule-container {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.text-container {
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+}
+
+footer {
+  background-color: var(--main-dark-color);
 }
